--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/index.js",
+    "start": "node ./dist/server.js",
     "build": "tsc --build",
-    "dev": "nodemon --exec tsx ./src/index.ts",
+    "dev": "nodemon --exec tsx ./src/server.ts",
     "test": "jest"
   },
   "keywords": [],
@@ -18,11 +18,8 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
-    "@types/jest": "^30.0.0",
-    "jest": "^30.1.2",
+    "@types/node": "^24.3.0",
     "nodemon": "^3.1.10",
-    "ts-jest": "^29.4.1",
-    "ts-node": "^10.9.2",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   }
