--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
     "start": "node ./dist/server.js",
     "build": "tsc --build",
     "dev": "nodemon --exec tsx ./src/server.ts",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +29,7 @@
     "@types/node": "^24.3.0",
     "@types/supertest": "^6.0.3",
     "jest": "^30.1.3",
+    "mongodb-memory-server": "^10.2.0",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.1",
