--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,10 @@
     "dev": "nodemon --exec tsx ./src/server.ts",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:debug": "jest --verbose --no-cache --runInBand",
+    "test:bail": "jest --bail",
+    "test:errors": "jest --verbose --no-coverage --runInBand --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +30,7 @@
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/mongodb-memory-server": "^1.8.0",
     "@types/node": "^24.3.0",
     "@types/supertest": "^6.0.3",
     "jest": "^30.1.3",
