--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/mocha": "^10.0.10",
     "@types/mongodb-memory-server": "^1.8.0",
     "@types/node": "^24.3.0",
     "@types/supertest": "^6.0.3",
