--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/server.js",
+    "start": "tsx ./src/server.ts",
     "build": "tsc --build",
     "dev": "nodemon --exec tsx ./src/server.ts",
     "test": "jest",
