--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "tsx ./src/server.ts",
+    "start": "node ./dist/server.js",
     "build": "tsc --build",
     "dev": "nodemon --exec tsx ./src/server.ts",
     "test": "jest",
@@ -16,7 +16,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
