--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,9 +7,10 @@
 
     // Compilação
     "target": "es2022", // Versão do JavaScript de saída (Node.js moderno)
-    "module": "esnext", // ES Modules
-    "moduleResolution": "bundler", // Resolução de módulos
+    "module": "commonjs", // ES Modules
+    "moduleResolution": "node", // Resolução de módulos
     "esModuleInterop": true, // Compatibilidade com módulos CommonJS/ES
+    "allowSyntheticDefaultImports": true,
 
     // Verificação de tipo
     "strict": true, // Ativa as verificações de TypeScript
@@ -22,8 +23,15 @@
     // Otimização e compatibilidade
     "skipLibCheck": true, // Pula a verificação dos tipos node_modules
     "isolatedModules": true, // Compatibilidade com bundles modernos
-    "moduleDetection": "force" // Força a detecção de módulos
+    "moduleDetection": "force", // Força a detecção de módulos
+
+    "types": ["node", "jest"],
+    "typeRoots": ["./node_modules/@types"],
+    "lib": ["ES2022"]
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "build", "**/*/*.test.ts"]
+  "exclude": ["node_modules", "dist", "**/*/*.test.ts"],
+  "ts-node": {
+    "esm": true
+  }
 }
