--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./dist/server.js",
-    "build": "tsc --build",
+    "build": "tsc",
     "dev": "nodemon --exec tsx ./src/server.ts",
     "test": "jest",
     "test:watch": "jest --watch",
