--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,32 +1,34 @@
 {
-  // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
     // Estrutura
-    "rootDir": "./src", // Arquivos fonte
-    "outDir": "./dist", // Arquivos compilados (build)
+    "rootDir": "./src",
+    "outDir": "./dist",
 
     // Compilação
-    "target": "es2022", // Versão do JavaScript de saída (Node.js moderno)
-    "module": "commonjs", // ES Modules
-    "moduleResolution": "node", // Resolução de módulos
-    "esModuleInterop": true, // Compatibilidade com módulos CommonJS/ES
+    "target": "ES2022",
+    "module": "CommonJS",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
 
     // Verificação de tipo
-    "strict": true, // Ativa as verificações de TypeScript
-    "noUncheckedIndexedAccess": true, // Segurança com acesso a arrays/objetos
-    "exactOptionalPropertyTypes": true, // Maior rigor com props opcionais
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "exactOptionalPropertyTypes": true,
 
     // Geração de arquivos
-    "sourceMap": true, // Debbuging
+    "sourceMap": true,
 
     // Otimização e compatibilidade
-    "skipLibCheck": true, // Pula a verificação dos tipos node_modules
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
 
+    // Tipos
     "types": ["node", "jest"],
     "typeRoots": ["./node_modules/@types"],
     "lib": ["ES2022"]
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts"]
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"]
 }
