--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -25,7 +25,7 @@
     "resolveJsonModule": true,
 
     // Tipos
-    "types": ["node", "jest"],
+    // "types": ["node", "jest"],
     "typeRoots": ["./node_modules/@types"],
     "lib": ["ES2022"]
   },
