--- a/backend/package.json
+++ b/backend/package.json
@@ -23,17 +23,17 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.0"
-  },
-  "devDependencies": {
+    "mongoose": "^8.18.0",
+    "@types/node": "^20.0.0",
+    "@types/express": "^5.0.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10"
+  },
+  "devDependencies": {
     "@types/jest": "^30.0.0",
-    "@types/jsonwebtoken": "^9.0.10",
     "@types/mocha": "^10.0.10",
     "@types/mongodb-memory-server": "^1.8.0",
-    "@types/node": "^20.0.0",
     "@types/supertest": "^6.0.3",
     "jest": "^30.1.3",
     "mongodb-memory-server": "^10.2.0",
